HelloUltraviolet/Fixtures/RejectedSource/Attributes/ReservedVendorNamespace/Source/Main.uv
//! Rejected vendor attribute specimen for the reserved ultraviolet namespace.

#ultraviolet::vendor_probe
public procedure reservedVendorNamespaceReference() -> i32 {
    return 1
}
